Mon Aug 25 14:49:26 UTC 2014  Byron Harris  <harrisb@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/idl/CPPTemplate.txt:
        * dds/idl/HTemplate.txt:
        * tests/DCPS/unit/MyTypeSupportImpl.h:

          Remove pure virtual function DataReaderImpl::take_generic()
          which wasn't being used anywhere.

        * dds/DCPS/ZeroCopySeq_T.h:
        * dds/DCPS/ZeroCopySeq_T.cpp:

          Remove ZeroCopySeq::decrement_reference() which was only
          being called by code that implemented DataReaderImpl::take_generic().
          This function had questionable semantics anyway since it
          wasn't clear what the expected behavior was if the reference
          count went to zero.

Mon Aug 25 12:38:56 UTC 2014  Byron Harris  <harrisb@ociweb.com>

        * dds/InfoRepo/FederatorManagerImpl_updates.cpp:
        * performance-tests/Bench/src/Publication.cpp:
        * performance-tests/Bench/src/Subscription.cpp:

          Address failure to check return status codes as reported
          by Coverity.

Fri Aug 22 20:08:21 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/LargeSample/Writer.cpp:

          Don't sleep between sends.

        * tests/DCPS/LargeSample/multicast.ini:

          Double nak_depth.

        * tests/DCPS/LargeSample/subscriber.cpp:

          Reworking logging.

Fri Aug 22 16:11:35 UTC 2014  Byron Harris  <harrisb@ociweb.com>

        * tests/DCPS/MultiRepoTest/TestConfig.h:
        * tests/DCPS/MultiRepoTest/TestMonitor.cpp:

          Avoid conversions from unsigned to signed type causing
          Visual Studio compiler to emit numerous warnings.

Fri Aug 22 01:57:53 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/DataSampleElement.inl:

          Fix FUZZ

Thu Aug 21 22:52:12 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/DCPSInfoRepo/DCPSDataReaderI.cpp:
        * tests/transport/error_handling/SimpleTransportClient.h:
